--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -15,4 +15,38 @@
 .navbarContainer .navLink-special {
     border: 1px solid var(--text-color);
     padding: 10px 30px;
+    position: relative;
+    overflow: hidden;
+    transition: color 0.2s ease-in-out;
+}
+
+
+.navbarContainer .navLink-special:hover {
+    cursor: pointer;
+}
+
+.navbarContainer .navLink-special::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--text-color);
+    z-index: 0;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.navbarContainer .navLink-special:hover::before {
+    transform: translateY(0);
+}
+
+.navbarContainer .navLink-special:hover {
+    color: var(--white-color);
+}
+
+.navbarContainer .navLink-special a {
+    position: relative;
+    z-index: 1;
 }
