--- a/src/componentsContainer/HomeFrontPage/style.css
+++ b/src/componentsContainer/HomeFrontPage/style.css
@@ -2,6 +2,7 @@
     height: 100vh;
     min-height: 700px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .homeFrontPage-wrapper {
@@ -22,7 +23,10 @@
 .homeFrontPage-videoTextContainer {
     width: 480px;
     max-height: 1px;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .homeFrontPage-videoContainer {
@@ -32,8 +36,22 @@
     width: 480px;
     height: 480px;
     max-height: 480px;
-    position: relative;
     transition: 1s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    z-index: 2;
+}
+
+.homeFrontPage-videoContainer-filter {
+    filter: invert();
+}
+
+.homeFrontPage-videoContainer video {
+    width: 100vw !important;
+    height: 100vh !important;
+    position: static !important;
 }
 
 .homeFrontPage-videoContainer-startPosition {
@@ -44,6 +62,9 @@
 .homeFrontPage-videoContainer-setBigger {
     width: 100vw;
     height: 100vh;
+    top: 0;
+    max-height: 100vh;
+    transform: none;
 }
 
 .homeFrontPage-titleContainer {
