--- a/src/componentsContainer/HomeFrontPage/style.css
+++ b/src/componentsContainer/HomeFrontPage/style.css
@@ -3,6 +3,12 @@
     min-height: 700px;
     overflow-y: scroll;
     overflow-x: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.homeFrontPageContainer::-webkit-scrollbar {
+    display: none;
 }
 
 .homeFrontPage-wrapper {
