--- a/src/components/ItemsGallery/style.css
+++ b/src/components/ItemsGallery/style.css
@@ -6,8 +6,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     overflow: hidden;
+    z-index: -1;
 }
 
 .itemsGallery-imgContainer {
@@ -19,6 +22,7 @@
     z-index: -1;
     transition: 0.4s ease-in-out;
     opacity: 0;
+    overflow: hidden;
 }
 
 .itemsGallery-imgContainerSelected {
@@ -105,4 +109,10 @@
     position: absolute;
     bottom: 0.6rem;
     left: 0;
+}
+
+.homeOurServices-transition {
+    height: 100vh;
+    background-color: var(--light-gray);
+    width: 100%;
 }
