--- a/src/componentsContainer/HomeAboutUs/style.css
+++ b/src/componentsContainer/HomeAboutUs/style.css
@@ -1,5 +1,82 @@
 .homeAboutUsContainer {
     width: 100%;
+    height: 900vh;
+    min-height: 700px;
+    background-color: var(--light-gray);
+    position: relative;
+}
+
+.homeAboutUs-itemsContainer {
+    width: 100%;
     height: 100vh;
     min-height: 700px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 80px;
+    padding-right: 80px;
+    box-sizing: border-box;
+}
+
+.homeAboutUs-itemContainer {
+    width: 440px;
+    height: 0;
+}
+
+
+.homeAboutUs-item-title {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 2.5rem;
+    margin: 0;
+    margin-bottom: 20px;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: 0.4s ease-in-out;
+}
+
+.homeAboutUs-item-desc {
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.875rem;
+    text-align: left;
+    margin: 0;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: 0.4s ease-in-out;
+}
+
+.homeAboutUs-item-elementFadeIn {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.homeAboutUs-items-ball {
+    width: 95px;
+    height: 95px;
+    border-radius: 50%;
+    background-color: red;
+    position: absolute;
+    top: 40%;
+    left: 12%;
+}
+
+.homeAboutUsMarkerContainer {
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    padding-top: 50vh;
+}
+
+.homeAboutUsMarker {
+    width: 10px;
+    height: 10px;
+    margin-bottom: 100vh;
+    background-color: red;
 }
