--- a/src/componentsContainer/HomeAboutUs/style.css
+++ b/src/componentsContainer/HomeAboutUs/style.css
@@ -58,10 +58,98 @@
     width: 95px;
     height: 95px;
     border-radius: 50%;
-    background-color: red;
     position: absolute;
-    top: 40%;
-    left: 12%;
+    top: 38%;
+    left: -100px;
+    transform: translateX(-50%);
+    transition: 0.4s ease-in-out;
+    overflow: hidden;
+}
+
+.homeAboutUs-items-videoWrapper {
+    width: calc(100vw - 160px);
+    height: calc(100vh - 200px);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.homeAboutUs-items-videoWrapper video {
+    transition: 0.4s ease-in-out;
+}
+
+.homeAboutUs-items-video-textContainer {
+    position: absolute;
+    color: var(--white-color);
+    bottom: 73px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-right: 109px;
+    margin-left: 109px;
+    opacity: 0;
+    transition: 0.4s ease-in-out;
+    transition-delay: 1s;
+}
+
+.homeAboutUs-items-video-textContainer-fadeIn {
+    opacity: 1;
+}
+
+.homeAboutUs-items-video-textContainer-info {
+    width: 75%;
+}
+
+.homeAboutUs-items-video-textContainer-info h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 4rem;
+    letter-spacing: -1px;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 24px;
+}
+
+.homeAboutUs-items-video-textContainer-info p {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.875rem;
+    letter-spacing: -1px;
+    width: 60%;
+    margin: 0;
+}
+
+.homeAutoUs-video-textContainer-link {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.7rem;
+    border-bottom: 1px solid var(--white-color);
+    width: fit-content;
+    position: relative;
+    padding-bottom: 4px;
+}
+
+.homeAboutUs-items-ball-firstPosition {
+    left: calc(33.3333% - 320px);
+}
+
+.homeAboutUs-items-ball-secondPosition {
+    left: calc(66.6666% - 345px);
+}
+
+.homeAboutUs-items-ball-thirdPosition {
+    left: calc(99.9999% - 362px);
+}
+
+.homeAboutUs-items-ball-expand {
+    width: calc(100% - 160px);
+    height: calc(100% - 200px);
+    box-sizing: border-box;
+    top: 100px;
+    left: 80px;
+    transform: none;
+    border-radius: 0;
+    z-index: 2;
 }
 
 .homeAboutUsMarkerContainer {
@@ -79,4 +167,8 @@
     height: 10px;
     margin-bottom: 100vh;
     background-color: red;
+}
+
+.homeAboutUs-items-video-invert video {
+    filter: invert();
 }
