Agregadas animaciones a Services - FrontPage

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,34 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+
+.fadeIn-animation {
+  animation: 1s fadeIn;
+}
+
+.opacity-animation {
+  animation: 2s opacity;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
