--- a/src/componentsContainer/HomeGallery/style.css
+++ b/src/componentsContainer/HomeGallery/style.css
@@ -1,31 +1,84 @@
 .homeGallerySectionContainer {
     position: relative;
     height: fit-content;
-    overflow: hidden;
 }
 
 .homeGalleryBanner {
     height: 100vh;
     width: 100%;
-    overflow: hidden;
     position: sticky;
-    margin-bottom: 50vh;
+    top: 0;
+    z-index: 3;
 }
 
-.homeGallery-imgContainer-bannerBG {
+.homeGalleryBanner img {
+    width: 100%;
+    aspect-ratio: 504 / 689;
+    object-fit: cover;
+    transition: 0.7s ease-in-out;
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
-    transform: translateY(0)!important;
+}
+
+.homeGalleryBanner-transition {
+    position: relative;
+}
+
+.homeGalleryBanner-transition img {
+    width: calc((100vw - 216px) / 3);
+    top: calc(((100vw - 216px) / 3 ) * (689 / 504) + 28px + 100vh);
+    left: calc((100vw - 216px) / 3  + 108px);
+    transform: translateY(-50%);
+}
+
+.homeGalleryBanner-textContainer {
+    color: var(--white-color);
+    position: absolute;
+    top: 167px;
+    left: 189px;
+    z-index: 3;
+    opacity: 1;
+    transition: 1s ease-in-out;
+}
+
+.homeGalleryBanner-textContainer-transition {
+    opacity: 0;
+}
+
+.homeGalleryBanner-textContainer h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 4rem;
+    letter-spacing: -0.063rem;
+    margin: 0;
+    margin-bottom: 24px;
+    width: 50%;
+}
+
+.homeGalleryBanner-textContainer p {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.7rem;
+    margin: 0;
+    margin-bottom: 60px;
+    width: 35%;
+}
+
+.homeGalleryBanner-textContainer span {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.7rem;
+    border-bottom: 1px solid var(--white-color);
 }
 
 .homeGalleryContainer {
-    height: calc(((100vw - 216px) / 3) * (689 / 504 ) * 2 + 56px);
+    height: calc(((100vw - 216px) / 3) * (689 / 504) * 2 + 56px);
     overflow: hidden;
     margin-right: 80px;
     margin-left: 80px;
 }
+
 .homeGalleryWrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -37,13 +90,20 @@
     grid-column: 1;
     text-align: end;
 }
+
 .homeGallery-imgContainer-rightPosition {
     grid-column: 3;
     text-align: start;
 }
+
 .homeGallery-imgContainer-centerPosition {
     grid-column: 2;
     transform: translateY(-50%);
+}
+
+.homeGallery-imgContainer-centerPositionBG {
+    width: 0;
+    height: 0;
 }
 
 .homeGallery-imgContainer {
