--- a/src/componentsContainer/ServiceInfo/style.css
+++ b/src/componentsContainer/ServiceInfo/style.css
@@ -1,5 +1,5 @@
 .servicesInfoContainer {
-    min-height: 100px;
+    height: 100vh;
     margin-top: 80px;
     padding-left: 80px;
     padding-right: 80px;
