--- a/src/componentsContainer/ServicesFrontPage/style.css
+++ b/src/componentsContainer/ServicesFrontPage/style.css
@@ -15,23 +15,29 @@
 }
 
 .servicesFrontPage-title1 {
-    top: 300px;
-    left: 250px;
-/*     top: 27%;
-    left: 6%; */
+    left: 10.93%;
+    top: 38.67%;
 }
 
 .servicesFrontPage-title2 {
-    top: 500px;
-    left: 864px;
-/*     bottom: 34%;
-    right: 17%; */
+    top: 55.95%;
+    left: 48.95%;
+}
+
+.servicesFrontPage-title2::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: var(--white-color);
+    position: absolute;
+    left: 0;
+    bottom: 1.9rem;
 }
 
 .servicesFrontPage-quoteContainer {
     position: absolute;
-    right: 249px;
-    bottom: 67px;
+    left: 50.69%;
+    top: 82.81%;
     width: 600px;
 }
 
