--- a/src/componentsContainer/HomeOurServices/style.css
+++ b/src/componentsContainer/HomeOurServices/style.css
@@ -17,6 +17,8 @@
     line-height: 4rem;
     letter-spacing: -0.01em;
     width: 50%;
+    margin: 0;
+    margin-bottom: 24px;
 }
 
 .homeOurServices-topInfoContainer p {
@@ -24,4 +26,33 @@
     font-weight: 400;
     line-height: 1.875rem;
     width: 40%;
+    margin: 0;
+}
+
+@media (799px < width < 1025px) {
+    .homeOurServicesContainer {
+        margin-top: 60px;
+    }
+
+    .homeOurServices-topInfoContainer {
+        margin-left: 30px;
+        margin-bottom: 100px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .homeOurServices-topInfoContainer h2 {
+        font-size: 2.25rem;
+        line-height: 2rem;
+    }
+
+    .homeOurServices-topInfoContainer p {
+        font-size: 1.125rem;
+        line-height: 1.406rem;
+        width: 50%;
+    }
+}
+
+@media (width < 800px) {
+
 }
