--- a/src/componentsContainer/HomeAboutUs/style.css
+++ b/src/componentsContainer/HomeAboutUs/style.css
@@ -172,3 +172,69 @@
 .homeAboutUs-items-video-invert video {
     filter: invert();
 }
+
+@media (width < 1025px) {
+    .homeAboutUsContainer {
+        background-color: var(--white-color);
+        height: fit-content;
+    }
+
+    .homeAboutUsContainer ul {
+        list-style: none;
+        padding: 0;
+        margin-left: 30px;
+        width: 50%;
+    }
+
+    .homeAboutUsContainer h3 {
+        font-size: 2rem;
+        font-weight: 500;
+        line-height: 2.172rem;
+        margin: 0;
+        margin-bottom: 16px;
+    }
+    .homeAboutUsContainer p {
+        font-size: 1.125rem;
+        font-weight: 400;
+        line-height: 1.406rem;
+        margin: 0;
+        margin-bottom: 30px;
+    }
+
+    .aboutUsVideoContainer {
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        color: var(--white-color);
+        z-index: 2;
+        margin-top: 331px;
+    }
+
+    .aboutUsVideoContainer h2 {
+        font-size: 2rem;
+        font-weight: 700;
+        line-height: 2rem;
+        letter-spacing: -0.01em;
+    }
+
+    .aboutUsVideoContainer p {
+        font-size: 1.125rem;
+        font-weight: 400;
+        line-height: 1.406rem;
+    }
+
+    .aboutUsVideoContainer-textContainer {
+        position: absolute;
+        left: 30px;
+        bottom: 330px;
+        width: 50%;
+    }
+
+    .aboutUsVideoContainer-linkContainer {
+        position: absolute;
+        right: 38px;
+        bottom: 100px;
+        border-bottom: 1px solid var(--white-color);
+    }
+
+}
