--- a/src/views/Services/style.css
+++ b/src/views/Services/style.css
@@ -26,3 +26,17 @@
 .services-info-translate {
     transform: translateY(-150%);
 }
+
+@media (799px < width < 1025px) {
+    .servicesPage-section-title {
+        font-size: 1.125rem;
+        font-weight: 400;
+        line-height: 1.406rem;
+        width: 24.813rem;
+        margin-left: 30px;
+        margin-top: 60px;
+        margin-bottom: 121px;
+    }
+}
+
+@media (width < 800px) {}
