--- a/src/componentsContainer/ServiceInfo/style.css
+++ b/src/componentsContainer/ServiceInfo/style.css
@@ -89,6 +89,7 @@
         margin-left: 110px;
         margin-right: 110px;
     }
+
     .servicesInfoContainer {
         padding-left: 0;
         padding-right: 0;
@@ -121,9 +122,61 @@
     .servicesInfo-item-list {
         display: none;
     }
+
     .servicesInfo-item-textMargin {
         margin-bottom: 76px !important;
     }
 }
 
-@media (width < 800px) {}
+@media (width < 800px) {
+
+    .servicesInfo-verticalLine,
+    .servicesInfo-item-list {
+        display: none;
+    }
+
+    .servicesInfoContainer {
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        margin-left: 22px;
+        margin-right: 15px;
+        align-items: center;
+        flex-direction: column;
+        height: fit-content;
+        margin-top: 0;
+        border-left: 1px solid var(--light-gray2);
+    }
+
+    .servicesInfoContainer h2 {
+        font-size: 2rem;
+        line-height: 1.688rem;
+        margin-left: 23px;
+        margin-right: 155px;
+        margin-bottom: 60px;
+    }
+
+    .servicesInfo-item-textContainer h3 {
+        font-size: 1.75rem;
+        line-height: 2.188rem;
+        margin-top: 0;
+    }
+    .servicesInfo-item-textContainer p {
+        font-size: 1rem;
+        line-height: 1.25rem;
+        margin: 0;
+        margin-top: 16px;
+        margin-bottom: 24px;
+        width: 75%;
+    }
+    .servicesInfo-itemsContainer {
+        margin-left: 22px;
+    }
+    .servicesInfo-item-textContainer {
+        width: 100%;
+    }
+
+    .servicesInfo-item-textMargin {
+        margin-bottom: 100px !important;
+    }
+}
