--- a/src/views/Services/style.css
+++ b/src/views/Services/style.css
@@ -39,4 +39,16 @@
     }
 }
 
-@media (width < 800px) {}
+@media (width < 800px) {
+    .servicesPage-section-title {
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.25rem;
+        text-align: left;
+        margin-left: 8px;
+        margin-right: 36px;
+        margin-top: 100px;
+        margin-bottom: 130px;
+    }
+
+}
